--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,4 +20,12 @@
     {{/if}}
     {{/each}}
 </ul>
-{{!-- add create burger form --}}
+<h1>Add a burgers</h1>
+<form id="create-form">
+
+    <div class="form-group">
+        <label for="addBurger">Burger name:</label>
+        <input type="text" id="addBurger" name="name">
+    </div>
+    <button type="submit">Add burger</button>
+</form>
