--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,5 +27,5 @@
         <label for="addBurger">Burger name:</label>
         <input type="text" id="addBurger" name="name">
     </div>
-    <button type="submit">Add burger</button>
+    <button type="submit" class="addBurgerBtn">Add burger</button>
 </form>
